cargo-features = ["profile-rustflags"]

[package]
name = "datex-core"
version = "0.0.7"
description = "The DATEX Core Rust implementation"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
]
edition = "2024"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["macros"]

[[bench]]
name = "mod"
harness = false

[dependencies]
# core dependencies
byteorder = { version = "1", default-features = false }
lazy_static = "1.4.0"
strum_macros = { version = "0.27.1" }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
mopa = { version = "0.2.2", default-features = false }
num = {version = "0.4.3", default-features = false}
num-bigint = {version = "0.4", default-features = false}
num-integer = {version = "0.1", default-features = false}
num_enum = {version = "0.7.4", default-features = false}

default-args = "1.0.0"
itertools = "0.14.0"
pad = "0.1"
binrw = {version =  "0.15.0", default-features = false }
modular-bitfield = "0.12.0"
thiserror = {version = "2.0.11", default-features = false}
url = {version = "2.5.4", default-features = false}
num-traits = {version = "0.2.19", default-features = false}
async-trait = "0.1.87"
hex = {version = "0.4.3", default-features = false}
log = { version = "0.4", default-features = false }
cfg-if = "1.0.1"
bytes = { version = "1", default-features = false }
futures-util = { version = "0.3", default-features = false }
futures = { version = "0.3", default-features = false }
indexmap = {version = "2.9.0", default-features = false}
ordered-float = { version = "5.0.0", default-features = false}
bigdecimal = {version = "0.4.8", default-features = false}
ntest_timeout = "0.9.3"
ringmap = {version = "0.1.3", default-features = false}
chumsky = { version = "0.10.1", features = ["std"], default-features = false }
logos = "0.15.0"
futures-core = {version = "0.3.31", default-features = false}
internment = "0.8.6"
syntect = { version = "5.2.0", default-features = false, features = [
    "default-fancy",
] }
indoc = "2.0.6"
pretty = "0.12.5"
spin = "0.10.0"

datex_macros = { path = "./macros", version = "0.1.1" }

# optional dependencies
tokio = { version = "1.43.0", optional = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
], default-features = false }
nostd = { version = "0.1.4", optional = true, features = ["hashbrown", "io", "alloc"] }
rand = { version = "0.8.5", optional = true }
uuid = { version = "1.15.1", features = ["v4"], optional = true }
flexi_logger = { version = "0.31.2", optional = true }
console_log = { version = "1.0.0", optional = true }
esp-idf-svc = { version = "0.51.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = {version = "1.0.219", default-features = false, optional = true}
serde_with = {version = "3.12.0", default-features = false, optional = true}
webrtc = { version = "0.13.0", optional = true }
serde_json = {version = "1.0.140", default-features = false, optional = true}
serde-big-array = {version = "0.5.1", optional = true}
ariadne = { version = "0.5.1", optional = true}


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8.4", optional = true }
tokio-stream = { version = "0.1.17", optional = true, features = ["sync"] }
hyper = { version = "1", optional = true }
serialport = { version = "4.7.1", optional = true }
tokio-tungstenite = { version = "0.21.0", optional = true, features = [
    "native-tls",
] }
tungstenite = { version = "0.21.0", optional = true }
openssl = { version = "0.10.73", optional = true }

wasm-bindgen-futures = { optional = true, version = "0.4.29" }
gloo-timers = { optional = true, version = "0.3.0", features = ["futures"] }
tsify = { optional = true, version = "0.5.5" }
wasm-bindgen = { optional = true, version = "=0.2.102" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.29" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
tsify = "0.5.5"
wasm-bindgen = "=0.2.102"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

# Development dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
matchbox_signaling = { version = "0.12.0" }
tokio = { version = "1.43.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
], default-features = false }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
criterion-macro = "0.4.0"
json-syntax = "0.12.5"


[features]
default = [
    "nostd",
    "native_websocket",
    "native_tcp",
    "native_rand",
    "native_uuid",
    "native_crypto",
    "native_time",
    "native_http",
    "native_serial",
    "native_webrtc",
    "wasm_webrtc",
    "flexi_logger",
    "tokio_runtime",
    "serde",
    "compiler",
    # "debug", # temporary to fix linting and allow tests to run
] # default to nostd

# com interfaces
native_http = ["axum", "hyper", "tokio-stream"]
native_websocket = ["tokio-tungstenite", "tungstenite"] # use native websocket
native_tcp = []                                         # use native tcp
native_time = []                                        # use native time
native_rand = ["rand"]                                  # use native websocket
native_uuid = ["uuid"]                                  # use native uuid
native_crypto = ["openssl"]                             # use native crypto
native_serial = ["serialport"]                          # use native serial
native_webrtc = ["webrtc"]                              # use webrtc

wasm_webrtc = [] # use webrtc

# logger
wasm_logger = ["console_log", "console_error_panic_hook"]
esp_logger = ["esp-idf-svc"]
env_logger = []

# runtime
tokio_runtime = ["dep:tokio"]
wasm_runtime = [
    "dep:wasm-bindgen-futures",
    "dep:gloo-timers",
    "dep:tsify",
    "dep:wasm-bindgen",
]

# utils
std = [
    "serde/std",
    "serde_with/std",
    "serde_json/std",
    "indexmap/std",
    "log/std",
    "futures-util/std",
    "byteorder/std",
    "futures-core/std",
    "futures/std",
    "url/std",
    "num/std",
    "num-traits/std",
    "num-bigint/std",
    "num-integer/std",
    "bigdecimal/std",
    "ordered-float/std",
    "num_enum/std",
    "strum/std",
    "binrw/std",
    "thiserror/std",
    "hex/std",
    "bytes/std",
    "ringmap/std",
]   # use std
nostd = [
    "dep:nostd",
    "serde/alloc",
    "serde_with/alloc",
    "serde_json/alloc",
    "futures-util/alloc",
    "futures-core/alloc",
    "futures/alloc",
    "mopa/no_std",
    "hex/alloc"
]
debug = [
    "dep:serde-big-array"
]
serde = [
    "dep:serde",
    "dep:serde_json",
    "dep:serde_with",
    "serde_with/guide",
    "log/serde",
]

compiler = [
    "dep:ariadne"
]
