cargo-features = ["profile-rustflags"]

[package]
name = "datex-core"
version = "0.0.7"
description = "The DATEX Core Rust implementation"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
]
edition = "2024"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["macros"]

[[bench]]
name = "mod"
harness = false

[lints.clippy]
std_instead_of_core = "deny"
alloc_instead_of_core = "deny"
std_instead_of_alloc = "deny"

[dependencies]
# core dependencies
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
mopa = { version = "0.2.2", default-features = false }
num = {version = "0.4.3", default-features = false}
num-bigint = {version = "0.4", default-features = false}
num-integer = {version = "0.1", default-features = false}
num_enum = {version = "0.7.4", default-features = false}
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
binrw = {version =  "0.15.0", default-features = false }
modular-bitfield = "0.13.0"
thiserror = {version = "2.0.11", default-features = false}
url = {version = "2.5.4", default-features = false}
num-traits = {version = "0.2.19", default-features = false}
hex = {version = "0.4.3", default-features = false}
log = { version = "0.4", default-features = false, features = ["serde"] }
bytes = { version = "1", default-features = false }
futures-util = { version = "0.3", default-features = false }
futures = { version = "0.3", default-features = false }
indexmap = {version = "2.9.0", default-features = false}
ordered-float = { version = "5.0.0", default-features = false}
bigdecimal = {version = "0.4.8", default-features = false}
ringmap = {version = "0.1.3", default-features = false}
futures-core = {version = "0.3.31", default-features = false}
serde = {version = "1.0.219", default-features = false, features = ["derive"]}
serde_with = {version = "3.12.0", default-features = false, features = ["macros", "schemars_1", "chrono"]}
serde_json = {version = "1.0.140", default-features = false}
serde-big-array = {version = "0.5.1", optional = true}

# macros
strum_macros = { version = "0.27.1" }
cfg-if = "1.0.1"
async-trait = "0.1.87"
datex_macros = { path = "./macros", version = "0.1.1" }

# optional dependencies
tokio = { version = "1.43.0", optional = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
], default-features = false }
nostd = { version = "0.1.4", optional = true, features = ["hashbrown", "io", "alloc"] }
rand = { version = "0.8.5", optional = true }
uuid = { version = "1.15.1", features = ["v4"], optional = true }
flexi_logger = { version = "0.31.2", optional = true }
console_log = { version = "1.0.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
webrtc = { version = "0.13.0", optional = true }
ariadne = { version = "0.5.1", optional = true}
syntect = { version = "5.2.0", default-features = false, optional = true, features = [
    "default-fancy",
] }
pretty = { version = "0.12.5", optional = true}
chumsky = { version = "0.10.1", optional = true, features = ["std"], default-features = false }
logos = {version = "0.15.0", optional = true}
internment = { version = "0.8.6", optional = true }
foldhash = { version = "0.2.0", optional = true, default-features = false}
spin = { version = "0.10.0", optional = true, default-features = false, features = ["spin_mutex", "mutex", "lock_api"]}
embassy-time = { version = "0.5.0", optional = true}
async-unsync = { version = "0.3.0", optional = true, default-features = false, features = ["alloc"] }
embassy-executor = { version = "0.9.1", optional = true}
embassy-futures = { version = "0.1.2", optional = true, default-features = false }
esp-println = { version = "0.16.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8.4", optional = true }
tokio-stream = { version = "0.1.17", optional = true, features = ["sync"] }
hyper = { version = "1", optional = true }
serialport = { version = "4.7.1", optional = true }
tokio-tungstenite = { version = "0.21.0", optional = true, features = [
    "native-tls",
] }
tungstenite = { version = "0.21.0", optional = true }
openssl = { version = "0.10.73", optional = true }

wasm-bindgen-futures = { optional = true, version = "0.4.29" }
gloo-timers = { optional = true, version = "0.3.0", features = ["futures"] }
tsify = { optional = true, version = "0.5.5" }
wasm-bindgen = { optional = true, version = "=0.2.102" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.29" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
tsify = "0.5.5"
wasm-bindgen = "=0.2.102"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

# Development dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
matchbox_signaling = { version = "0.12.0" }
tokio = { version = "1.43.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
], default-features = false }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
criterion-macro = "0.4.0"
json-syntax = "0.12.5"
lazy_static = "1.4.0"
ntest_timeout = "0.9.3"
indoc = "2.0.6"


[features]
default = [
    "nostd", # default to nostd
    "native_websocket",
    "native_tcp",
    "native_rand",
    "native_uuid",
    "native_crypto",
    "native_time",
    "native_http",
    "native_serial",
    "native_webrtc",
    "flexi_logger",
    "tokio_runtime",
    "compiler",
    "syntax_highlighting_legacy",
    "com_http",
    "com_tcp",
    "com_webrtc",
    "com_serial",
    "com_websocket",
    # "debug", # temporary to fix linting and allow tests to run
]

# com interfaces base
com_http = []
com_tcp = []
com_webrtc = []
com_serial = []
com_websocket = []

# native com intefaces
native_http = ["com_http", "axum", "hyper", "tokio-stream"]
native_websocket = ["com_websocket", "tokio-tungstenite", "tungstenite"] # use native websocket
native_tcp = ["com_tcp"]                                         # use native tcp
native_serial = ["com_serial", "serialport"]                          # use native serial
native_webrtc = ["com_webrtc", "webrtc"]                              # use webrtc

native_time = []                                        # use native time
native_rand = ["rand"]                                  # use native websocket
native_uuid = ["uuid"]                                  # use native uuid
native_crypto = ["openssl"]                             # use native crypto

# logger
wasm_logger = ["console_log", "console_error_panic_hook"]
esp_logger = [
    "dep:esp-println"
]
env_logger = []

# runtime
tokio_runtime = ["dep:tokio"]
wasm_runtime = [
    "dep:wasm-bindgen-futures",
    "dep:gloo-timers",
    "dep:tsify",
    "dep:wasm-bindgen",
]
embassy_runtime = [
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-futures",
    "dep:async-unsync"
]

# only required for legacy syntax highlighting in decompiler, will be removed in the future
syntax_highlighting_legacy = [
    "dep:syntect"
]


std = [
    "serde/std",
    "serde_with/std",
    "serde_json/std",
    "indexmap/std",
    "log/std",
    "futures-util/std",
    "futures-core/std",
    "futures/std",
    "url/std",
    "num/std",
    "num-traits/std",
    "num-bigint/std",
    "num-integer/std",
    "bigdecimal/std",
    "ordered-float/std",
    "num_enum/std",
    "strum/std",
    "binrw/std",
    "thiserror/std",
    "hex/std",
    "bytes/std",
    "ringmap/std",
]   # use std
nostd = [
    "dep:nostd",
    "dep:foldhash",
    "dep:spin",
    "serde/alloc",
    "serde_with/alloc",
    "serde_json/alloc",
    "futures-util/alloc",
    "futures-core/alloc",
    "futures/alloc",
    "mopa/no_std",
    "hex/alloc",
    "num/alloc",
    "num/libm",
]
debug = [
    "dep:serde-big-array"
]

# note: compiler requires std
compiler = [
    "std",
    "dep:ariadne",
    "dep:pretty",
    "dep:chumsky",
    "dep:logos",
    "dep:internment"
]
